--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 
 <dependencies>
 <dependency>
-<groupId>junit</groupId>
-<artifactId>junit</artifactId>
+<groupId>CustomerDetailsV2</groupId>
+<artifactId>CustomerDetailsV2</artifactId>
 <version>4.8.2</version>
 <scope>test</scope>
 </dependency>
