--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 <modelVersion>4.0.0</modelVersion>
 
 <groupId>com.mycompany.app</groupId>
-<artifactId>my-app</artifactId>
+<artifactId>CustomerDetailsV2</artifactId>
 <version>1.0-SNAPSHOT</version>
 <packaging>war</packaging>
 
@@ -12,8 +12,8 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 
 <dependencies>
 <dependency>
-<groupId>CustomerDetailsV2</groupId>
-<artifactId>CustomerDetailsV2</artifactId>
+<groupId>junit</groupId>
+<artifactId>junit</artifactId>
 <version>4.8.2</version>
 <scope>test</scope>
 </dependency>
